feat: add public connectivity checks
